<resources>
    <string name="app_name">MTG collection</string>
    <string name="login">Login</string>
    <string name="account_aanmaken">Account aanmaken</string>
    <string name="username">Username</string>
    <string name="full_name">Full name</string>
    <string name="email_adress">Email adress</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="back_to_login">Back to Login</string>
    <!-- Strings related to login -->

    <!-- Strings related to homepage -->
    <string name="my_profile">My profile</string>
    <string name="my_name">Test Naam</string>
    <string name="my_user">TestUser123</string>
    <string name="all_cards">All cards</string>
    <string name="EM">Eldritch Moon</string>
    <string name="AR">Aether Revolt</string>
    <string name="collected">collected</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings related to navigation -->
    <string name="title_account">Profile</string>
    <string name="title_friends">Friends</string>
<<<<<<< HEAD
    <string name="title_cards">Cards</string>
    <string name="title_trade">Trade</string>
    <string name="card">Card</string>
    <string name="logout">Logout</string>
=======
    <string name="title_cards">All cards</string>
    <string name="title_mycards">My cards</string>
>>>>>>> Burak
</resources>